--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
       context: .
     volumes:
       - ./app:/var/www/html
+    env_file:
+      - .env
 
   nginx:
     image: nginx:1-alpine
@@ -12,5 +14,5 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./artifacts/nginx.conf:/etc/nginx/conf.d/default.conf
       - ./app:/var/www/html
