--- a/app/composer.json
+++ b/app/composer.json
@@ -15,6 +15,9 @@
         "symfony/yaml": "6.1.*"
     },
     "require-dev": {
+        "phpunit/phpunit": "^9.5",
+        "psalm/phar": "^4.26",
+        "symfony/phpunit-bridge": "^6.1"
     },
     "config": {
         "allow-plugins": {
@@ -35,7 +38,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\Tests\\": "tests/"
+            "Test\\App\\": "tests/"
         }
     },
     "replace": {
