GitHub actions CI with Composer fix

--- a/app/composer.json
+++ b/app/composer.json
@@ -1,4 +1,6 @@
 {
+    "name": "dotcom-poland/thumbgun",
+    "description": "Serving resized S3 images on the fly",
     "type": "project",
     "license": "MIT",
     "minimum-stability": "stable",
