--- a/app/config/routes.yaml
+++ b/app/config/routes.yaml
@@ -1,3 +1,4 @@
-controllers:
-    resource: ../src/Controller/
-    type: attribute
+thumbnail_serve:
+    controller: App\UseCase\ServeResized\IndexAction
+    path: /t/{checksum}/{group}/{strategy}/{size}/{id}.{format}
+    methods: [ 'GET' ]
