--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,4 +1,4 @@
-name: PHP Composer
+name: Build and test
 
 on:
     push:
@@ -36,5 +36,11 @@ jobs:
             -   name: Run unit tests
                 run: bin/phpunit
 
-            -   name: Run static analysis
-                run: vendor/bin/psalm.phar
+            -   name: Move Psalm
+                run: mv vendor/bin/psalm.phar psalm.phar
+
+            -   name: Uninstall dev dependencies
+                run: composer install -o -n --no-dev
+
+            -   name: Static analysis
+                run: psalm.phar
