--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -37,7 +37,7 @@ jobs:
                 run: bin/phpunit
 
             -   name: Move Psalm
-                run: cp -f vendor/bin/psalm.phar /tmp/psalm.phar
+                run: cp -f vendor/psalm/phar/psalm.phar /tmp/psalm.phar
 
             -   name: Uninstall dev dependencies
                 run: composer install -o -n --no-dev
