Fix Docker permission issue

--- a/.env.dist
+++ b/.env.dist
@@ -3,3 +3,7 @@ COMPOSE_FILE=docker-compose.yml
 
 # Uncomment to enable XDebug
 # COMPOSE_FILE=docker-compose.yml:docker-compose.xdebug.yml
+
+# Include a custom docker-compose.custom.yml for custom modifications
+# Eg. to fix the Linux issue with user permissions
+# COMPOSE_FILE=docker-compose.yml:docker-compose.custom.yml
