--- a/app/.env
+++ b/app/.env
@@ -5,3 +5,11 @@ APP_SECRET_KEYS=change-me
 APP_ENV=dev
 APP_SECRET=4118dfa3a433f98d4a04d52764fc67da
 ###< symfony/framework-bundle ###
+
+###> aws/aws-sdk-php ###
+AWS_S3_REGION=eu-central-1
+AWS_S3_VERSION=latest
+AWS_S3_BUCKET=
+AWS_S3_KEY=
+AWS_S3_SECRET=
+###< aws/aws-sdk-php ###
