--- a/app/composer.json
+++ b/app/composer.json
@@ -10,6 +10,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-imagick": "^3.7",
+        "aws/aws-sdk-php": "^3.234",
         "symfony/console": "6.1.*",
         "symfony/dotenv": "6.1.*",
         "symfony/flex": "^2",
