--- a/artifacts/nginx.conf
+++ b/artifacts/nginx.conf
@@ -26,6 +26,8 @@ server {
         include        fastcgi_params;
         fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param  DOCUMENT_ROOT   $realpath_root;
+
+        fastcgi_hide_header X-Powered-By;
     }
 
     location ~ \.php$ {
