Filesystem caching feature

--- a/app/.env
+++ b/app/.env
@@ -1,6 +1,9 @@
 # Comma-separated list of possible secret keys
 APP_SECRET_KEYS=change-me
 
+# Storage for source images
+APP_STORAGE=var/storage
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=4118dfa3a433f98d4a04d52764fc67da
