Allow to move storage path outside of the root directory

--- a/app/config/services.yaml
+++ b/app/config/services.yaml
@@ -29,8 +29,7 @@ services:
         decorates: 'App\Core\Source\ImageSourceInterface'
         arguments:
             $source: '@.inner'
-            $rootDirectory: '%kernel.project_dir%'
-            $storageDirectory: '%env(APP_STORAGE)%'
+            $storage: '%env(APP_STORAGE)%'
 
     App\Core\Source\AWSS3ImageSource:
         arguments:
