--- a/app/.env
+++ b/app/.env
@@ -2,7 +2,7 @@
 APP_SECRET_KEYS=change-me
 
 # Storage for source images
-APP_STORAGE=var/storage
+APP_STORAGE=/var/www/html/var/storage
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
