Resized image caching feature

--- a/app/.env
+++ b/app/.env
@@ -4,6 +4,9 @@ APP_SECRET_KEYS=change-me
 # Storage for source images
 APP_STORAGE_SOURCES=/var/www/html/var/storage/sources
 
+# Storage for resized images
+APP_STORAGE_RESIZED=/var/www/html/var/storage/resized
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=4118dfa3a433f98d4a04d52764fc67da
