--- a/artifacts/xdebug.ini
+++ b/artifacts/xdebug.ini
@@ -1,3 +1,5 @@
 zend_extension=/usr/local/lib/php/extensions/no-debug-non-zts-20210902/xdebug.so
-xdebug.mode=debug,develop
+xdebug.mode=debug,develop,profile
 xdebug.client_host=host.docker.internal
+xdebug.output_dir=/var/www/html/var/log
+xdebug.start_with_request = trigger
