Improved installation notes

--- a/.env.dist
+++ b/.env.dist
@@ -1,9 +1,11 @@
-# Default without XDebug
+# Define which docker-compose configurations to use
+# You can merge multiple configuration files using the : symbol
+#
+# I.e. to use the base file and the custom file and enable xdebug:
+# COMPOSE_FILE=docker-compose.yml:docker-compose.xdebug.yml:docker-compose.custom.yml
+#
+# * docker-compose.yml - base configuration
+# * docker-compose.xdebug.yml - enables xdebug
+# * docker-compose.custom.yml - custom settings (ignored by git)
+
 COMPOSE_FILE=docker-compose.yml
-
-# Uncomment to enable XDebug
-# COMPOSE_FILE=docker-compose.yml:docker-compose.xdebug.yml
-
-# Include a custom docker-compose.custom.yml for custom modifications
-# Eg. to fix the Linux issue with user permissions
-# COMPOSE_FILE=docker-compose.yml:docker-compose.custom.yml
