--- a/app/.env.local.dist
+++ b/app/.env.local.dist
@@ -1,6 +1,9 @@
 APP_ENV=dev
 APP_DEBUG=1
 
+# Comma-separated list of possible secret keys
+APP_SECRET_KEYS=change-me
+
 ###> aws/aws-sdk-php ###
 AWS_S3_REGION=
 AWS_S3_VERSION=
