--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,4 +15,4 @@ services:
       - "80:80"
     volumes:
       - ./artifacts/nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./app:/var/www/html
+      - ./app/public:/var/www/html/public
