Concurrent access protection

--- a/app/.env
+++ b/app/.env
@@ -19,3 +19,7 @@ AWS_S3_BUCKET=
 AWS_S3_KEY=
 AWS_S3_SECRET=
 ###< aws/aws-sdk-php ###
+
+###> symfony/lock ###
+LOCK_DSN=flock:///var/www/html/var/lock
+###< symfony/lock ###
