--- a/app/composer.json
+++ b/app/composer.json
@@ -15,6 +15,7 @@
         "symfony/dotenv": "6.1.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.1.*",
+        "symfony/lock": "6.1.*",
         "symfony/mime": "6.1.*",
         "symfony/runtime": "6.1.*",
         "symfony/yaml": "6.1.*"
