--- a/app/config/services.yaml
+++ b/app/config/services.yaml
@@ -31,6 +31,11 @@ services:
             $processor: '@.inner'
             $storage: '%env(APP_STORAGE_RESIZED)%'
 
+    App\Core\Processor\LockingThumbnailProcessorDecorator:
+        decorates: 'App\Core\Processor\ThumbnailProcessorInterface'
+        arguments:
+            $processor: '@.inner'
+
     App\Core\Source\ImageSourceInterface: '@App\Core\Source\AWSS3ImageSource'
 
     App\Core\Source\CachingImageSourceDecorator:
