--- a/.env.dist
+++ b/.env.dist
@@ -6,6 +6,7 @@
 #
 # * docker-compose.yml - base configuration
 # * docker-compose.xdebug.yml - enables xdebug
+# * docker-compose.opcache.yml - enables OPcache
 # * docker-compose.custom.yml - custom settings (ignored by git)
 
 COMPOSE_FILE=docker-compose.yml
