Add comment about path separator on Windows
https://github.com/dotcom-poland/thumbgun/issues/20#issue-1459493725

--- a/.env.dist
+++ b/.env.dist
@@ -3,6 +3,7 @@
 #
 # I.e. to use the base file and the custom file and enable xdebug:
 # COMPOSE_FILE=docker-compose.yml:docker-compose.xdebug.yml:docker-compose.custom.yml
+# The path separator should be ; instead of : on Windows (https://docs.docker.com/compose/reference/envvars/#compose_file)
 #
 # * docker-compose.yml - base configuration
 # * docker-compose.xdebug.yml - enables xdebug
